--- a/_generate/social-img-build/preview.html
+++ b/_generate/social-img-build/preview.html
@@ -16,7 +16,7 @@
         /* new */
         color: white;
         font-family: 'Montserrat', sans-serif;
-        background: #ef476f;
+        background: var(--co_body-background);
         /* image is working, but I have no image to use right now :( */
         /* position: relative; */
       }
@@ -43,9 +43,10 @@
     </style>
   </head>
 
-  <body>
+  <body style="--co_body-background: #ef476f">
     <div>
-      <h1>Content Headline</h1>
+      <h1 id="j-title">Content Headline</h1>
+      <span id="j-color"></span>
       <p><span>by @giulia_chiola</span></p>
     </div>
     <!-- image is working, but I have no image to use right now :( -->
