--- a/_generate/social-img-build/preview.html
+++ b/_generate/social-img-build/preview.html
@@ -43,7 +43,7 @@
     </style>
   </head>
 
-  <body style="--co_body-background: #ef476f">
+  <body style="--co_body-background: red">
     <div>
       <h1 id="j-title">Content Headline</h1>
       <span id="j-color"></span>
