feat: update body

--- a/_generate/social-img-build/preview.html
+++ b/_generate/social-img-build/preview.html
@@ -40,10 +40,26 @@
         z-index: -1;
       }
       */
+
+      .t-palette-color--1 {
+        background-color: #ef476f;
+      }
+      .t-palette-color--2 {
+        background-color: #0d3b95;
+      }
+      .t-palette-color--3 {
+        background-color: #06d6a0;
+      }
+      .t-palette-color--4 {
+        background-color: #1b98e0;
+      }
+      .t-palette-color--5 {
+        background-color: #ff9f1c;
+      }
     </style>
   </head>
 
-  <body style="--co_body-background: red">
+  <body>
     <div>
       <h1 id="j-title">Content Headline</h1>
       <span id="j-color"></span>
