feat: add palette color in JSON

--- a/_generate/social-img-build/preview.html
+++ b/_generate/social-img-build/preview.html
@@ -27,20 +27,6 @@
         line-height: 1.2;
       }
 
-      /* image is working, but I have no image to use right now :( */
-      /*
-      img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0.2;
-        object-fit: cover;
-        z-index: -1;
-      }
-      */
-
       .t-palette-color--1 {
         background-color: #ef476f;
       }
@@ -62,11 +48,8 @@
   <body>
     <div>
       <h1 id="j-title">Content Headline</h1>
-      <span id="j-color"></span>
-      <p><span>by @giulia_chiola</span></p>
+      <p>by @giulia_chiola</p>
     </div>
-    <!-- image is working, but I have no image to use right now :( -->
-    <!-- <img src="https://www.seekpng.com/png/full/3-38187_free-botanical-drawings-for-bullet-journaling-bullet-journal.png"/> -->
   </body>
 
 </html>
