feat: NOT WORKING

--- a/_generate/social-img-build/preview.html
+++ b/_generate/social-img-build/preview.html
@@ -45,7 +45,7 @@
     </style>
   </head>
 
-  <body>
+  <body class="t-palette-color--1">
     <div>
       <h1 id="j-title">Content Headline</h1>
       <p>by @giulia_chiola</p>
