feat: remove 'by' in preview images

--- a/_generate/social-img-build/preview.html
+++ b/_generate/social-img-build/preview.html
@@ -46,7 +46,7 @@
   <body>
     <div>
       <h1>Content Headline</h1>
-      <p><span>by @giulia_chiola</span></p>
+      <p><span>@giulia_chiola</span></p>
     </div>
     <!-- image is working, but I have no image to use right now :( -->
     <!-- <img src="https://www.seekpng.com/png/full/3-38187_free-botanical-drawings-for-bullet-journaling-bullet-journal.png"/> -->
